# nexus

./: .gitignore  Cargo.toml  README.md
gateway/: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
gateway/.sqlx/: query-0fef924a626f090541914b9ede261647d2492c2eb50d3101bb1448f7a270ebfc.json  query-3a8420332b8721b8c3269a459f7300cd9e6cc40069321a16f6d459b28d14a402.json  query-508e64df84d23ab9d8f0c9818acac0bcfa86535bc2ee1c31d0e37f097deb50cf.json  query-53f34f063e1b01352314d6b14e7173ae90f3546438dc261e84327e7a6f31f4d3.json  query-5b2558ec9a9f5b0a404d5a8a844752c37d2cb1d4ffa4171acdc0458ea73f86e2.json  query-f287b7de28d17326507757952920bda8848033fd51967c3c56c50af49be72dd5.json
gateway/migrations/: 20260226095702_user.sql  20260302134029_device.sql
gateway/src/: main.rs
gateway/src/api/: config.rs  mod.rs
gateway/src/api/controllers/: auth.rs  device.rs  user.rs
gateway/src/api/endpoint/: mod.rs
gateway/src/api/models/: auth.rs  device.rs  mod.rs  user.rs
gateway/src/api/state/: mod.rs
gateway/src/cli/: mod.rs
gateway/src/config/: mod.rs
gateway/src/kafka/: config.rs  mod.rs
gateway/src/redis/: config.rs  mod.rs
gateway/src/sqlx/: config.rs  device.rs  mod.rs  user.rs
gateway/src/utils/: logger.rs  mod.rs  serde.rs  signal.rs
infrastructure/certs/: .gitignore  README.md  generate-ca.sh
infrastructure/emqx/: docker-compose.yml
infrastructure/gateway/: config.json  docker-compose.yml
infrastructure/kafka/: docker-compose.yml
infrastructure/kafka-producer/: config.json  docker-compose.yml
infrastructure/postgres/: docker-compose.yml
infrastructure/tunnel-server/: config.json  docker-compose.yml
k8s/emqx/: deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
k8s/gateway/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
k8s/kafka/: deployment.yaml  init-job.yaml  pvc.yaml  service.yaml
k8s/kafka-producer/: configmap.yaml  deployment.yaml  pvc.yaml
k8s/postgres/: deployment.yaml  pvc.yaml  service.yaml
k8s/redis/: deployment.yaml  pvc.yaml  service.yaml
k8s/tunnel-server/: configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
kafka-producer/: Cargo.toml  Dockerfile  build.rs
kafka-producer/src/: main.rs
kafka-producer/src/cli/: mod.rs
kafka-producer/src/config/: mod.rs
kafka-producer/src/kafka/: config.rs  mod.rs
kafka-producer/src/mqtt/: config.rs  mod.rs
kafka-producer/src/service/: mod.rs
kafka-producer/src/storage/: mod.rs
mqtt-client/: Cargo.toml  README.md  build.rs
mqtt-client/src/: main.rs
mqtt-client/src/cli/: mod.rs
mqtt-client/src/config/: mod.rs
mqtt-client/src/mqtt/: config.rs  mod.rs
mqtt-client/src/service/: command.rs  mod.rs  system.rs
mqtt-client/src/storage/: config.rs  mod.rs
tunnel-client/: Cargo.toml  build.rs
tunnel-client/src/: main.rs
tunnel-client/src/cli/: mod.rs
tunnel-client/src/config/: mod.rs
tunnel-client/src/service/: mod.rs
tunnel-server/: Cargo.toml  Dockerfile  build.rs
tunnel-server/src/: main.rs
tunnel-server/src/api/: mod.rs
tunnel-server/src/api/controllers/: auth.rs  device.rs  mod.rs  tunnel.rs
tunnel-server/src/api/endpoint/: mod.rs
tunnel-server/src/cli/: mod.rs
tunnel-server/src/config/: mod.rs
tunnel-server/src/models/: mod.rs
tunnel-server/src/redis/: mod.rs
tunnel-server/src/registry/: mod.rs
tunnel-server/src/state/: mod.rs
utils/: Cargo.toml
utils/src/: lib.rs  logger.rs  signal.rs  time.rs  tunnel.rs
