[package]
name = "gateway"
version = "0.1.0"
edition = "2024"
rust-version = "1.91.0"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.79"
axum = "0.8"
clap = { version = "4.5.3", features = ["derive"] }
dirs = "6.0.0"
futures-util = "0.3"
jsonwebtoken = "10.3"
libc = "0.2"
parking_lot = "0.12"
reqwest = { version = "0.13", features = ["json", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.114"
serde_path_to_error = "0.1"
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "uuid", "bigdecimal", "chrono", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "timeout"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-stackdriver = "0.10.0"
url = "2"
uuid = { version = "1", features = ["v4"] }
zeroize = { version = "1", features = ["derive"] }

[build-dependencies]
anyhow = "1.0.79"
rustc_version = "0.4.1"

[features]
default = ["http2"]
http2 = ["axum/http2"]
compression = ["tower-http/compression-gzip"]
