[package]
name = "gateway"
description = ""
include = ["src/**/*.rs", "./README.md"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "gateway"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tracing = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

nexus-utils = { workspace = true }

# Kafka — C dependency (librdkafka), cmake-build compiles from source
rdkafka = { version = "0.39", features = ["cmake-build", "tokio"] }

[build-dependencies]
anyhow = { workspace = true }
rustc_version = { workspace = true }

[features]
default = ["http2"]
http2 = ["axum/http2"]
compression = ["tower-http/compression-gzip"]
