[package]
name = "mqtt-client"
description = ""
include = ["src/**/*.rs", "./README.md"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "mqtt-client"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
native-tls = { workspace = true }
redb = { workspace = true }
rumqttc = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sysinfo = { workspace = true }
humantime-serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "fs"] }
tokio-util = { workspace = true }
tracing = { workspace = true }

nexus-utils = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustc_version = { workspace = true }
