[package]
name = "tunnel-client"
description = "Device-side WebSocket tunnel client"
include = ["src/**/*.rs"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "tunnel-client"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
http = { workspace = true }
humantime-serde = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

nexus-utils = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustc_version = { workspace = true }
