[package]
name = "tunnel-server"
description = "WebSocket tunnel server for IoT device web UI access"
include = ["src/**/*.rs"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "tunnel-server"
path = "./src/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
jsonwebtoken = { workspace = true }
redis = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zeroize = { workspace = true }

nexus-utils = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
rustc_version = { workspace = true }
