[package]
name = "nexus-utils"
description = "Shared utilities."
include = ["src/**/*.rs", "./README.md"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
futures-util = { workspace = true }
libc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_path_to_error = { workspace = true }
tokio = { workspace = true, features = ["signal"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-stackdriver = { workspace = true }
